set detail overflow to hidden to prevent mobile style problems

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ body {
     padding-top: 0.5em;
     padding-right: 1em;
     padding-left: 1em;
+    overflow: hidden;
 }
 
 .contact {
